# next_gen_prototype

./: README.md
discourse/: topics-interfaces.txt  traffic-management-interfaces.md
reservation_system/rmf_reservation_tests/: package.xml  setup.py
reservation_system/rmf_reservation_tests/test/: test_overlap.py  test_reservation.py
reservation_system/rmf_simple_destination_server/: Cargo.toml  package.xml
reservation_system/rmf_simple_destination_server/src/: main.rs
rmf_prototype_msgs/: CMakeLists.txt  package.xml
rmf_prototype_msgs/msg/: ControlPoint.msg  Curve.msg  Destination.msg  DestinationConstraints.msg  DestinationError.msg  DestinationGoal.msg  Error.msg  GraphElementKey.msg  NodeKey.msg  Participant.msg  ParticipantList.msg  Plan.msg  PlanError.msg  PlanId.msg  PlanRelease.msg  Progress.msg  Region.msg  SafeZone.msg  SafeZoneId.msg  SessionRefresh.msg  TargetNode.msg  TargetOrientation.msg  TargetRegion.msg  TrafficDependency.msg  Trajectory.msg  Waypoint.msg
src/rmf_simple_destination_server/: Cargo.toml
src/rmf_simple_destination_server/src/: main.rs
