[package]
name = "rmf_simple_destination_server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.32"
rclrs = "*"
rmf_prototype_msgs = "*"
unique_identifier_msgs = "*"
builtin_interfaces = { version = "2.0.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

