<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_simple_destination_server</name>
  <version>0.0.1</version>
  <description>A simple destination server for RMF next generation prototype.</description>
  <maintainer email="arjoc@google.com">Arjoc</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <build_depend>rclrs</build_depend>
  <build_depend>rmf_prototype_msgs</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>rmf_prototype_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
